--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -23,6 +23,10 @@ leftnav:
   name: Assignments
   url: /pages/assignments
   weight: 60
+- identifier: 899bb29a-22b5-4e17-93b3-ffc574daa551
+  name: Problem Sets
+  url: /pages/problem-sets
+  weight: 70
 - identifier: e5ca247a-22a6-4647-a855-e27ae64b78c9
   name: Assignment 1
   parent: 55fd0f2a-8b2d-49bc-9d61-d974a59424cf
@@ -45,26 +49,26 @@ leftnav:
   weight: 40
 - identifier: 2967e1eb-ef53-4438-9611-69fef34bc73d
   name: Problem Set 0
-  parent: 55fd0f2a-8b2d-49bc-9d61-d974a59424cf
+  parent: 899bb29a-22b5-4e17-93b3-ffc574daa551
   url: /pages/problem-set-0
-  weight: 50
+  weight: 10
 - identifier: 7b050e00-d44e-4607-9d70-f92d1ba08241
   name: Problem Set 1
-  parent: 55fd0f2a-8b2d-49bc-9d61-d974a59424cf
+  parent: 899bb29a-22b5-4e17-93b3-ffc574daa551
   url: /pages/problem-set-1
-  weight: 60
+  weight: 20
 - identifier: 57500f61-1787-433a-9349-b7af0a9a143c
   name: Problem Set 2
-  parent: 55fd0f2a-8b2d-49bc-9d61-d974a59424cf
+  parent: 899bb29a-22b5-4e17-93b3-ffc574daa551
   url: /pages/problem-set-2
-  weight: 70
+  weight: 30
 - identifier: c1607778-6722-4fc4-93d0-c5986c781d96
   name: Problem Set 3
-  parent: 55fd0f2a-8b2d-49bc-9d61-d974a59424cf
+  parent: 899bb29a-22b5-4e17-93b3-ffc574daa551
   url: /pages/problem-set-3
-  weight: 80
+  weight: 40
 - identifier: 77589af9-da3c-4410-a141-a270363fa954
   name: Problem Set 4
-  parent: 55fd0f2a-8b2d-49bc-9d61-d974a59424cf
+  parent: 899bb29a-22b5-4e17-93b3-ffc574daa551
   url: /pages/problem-set-4
-  weight: 90
+  weight: 50
