--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ leftnav:
   url: /pages/calendar
   weight: 20
 - identifier: 642f9ed2-92a6-4d94-a8b2-1999612071b3
-  name: Readings
+  name: Readings and Other Resources
   url: /pages/readings
   weight: 30
 - identifier: db335c9f-6141-4454-b87e-64f0a79998e2
